objects/Mathworks_Exchange_Rates__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>MW Exchange rates used on opportunity custom fields to convert custom local to corp and corp to local amount</description>
    <fields>
        <fullName>AUD_to_Corporate__c</fullName>
        <label>AUD to Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHF_To_Corporate__c</fullName>
        <label>CHF To Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CNY_to_Corporate__c</fullName>
        <label>CNY to Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DKK_To_Corporate__c</fullName>
        <label>DKK To Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_to_Corporate__c</fullName>
        <label>EUR to Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBP_to_Corporate__c</fullName>
        <label>GBP to Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INR_To_Corporate__c</fullName>
        <label>INR To Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JPY_To_Corporate__c</fullName>
        <label>JPY To Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KRW_To_Corporate__c</fullName>
        <label>KRW To Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOK_To_Corporate__c</fullName>
        <label>NOK To Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NZD_To_Corporate__c</fullName>
        <label>NZD To Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEK_To_Corporate__c</fullName>
        <label>SEK To Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_to_Corporate__c</fullName>
        <label>USD to Corporate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Mathworks Exchange Rates</label>
</CustomObject>